--- a/pages/play/index.html
+++ b/pages/play/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>3D</title>
+    <title>3DX</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="module" src="/play/index.js"></script>
+    <script type="module" src="/play/server.js"></script>
 </body>
 
 </html>
